--- a/MNA/src/main/res/values/library_vl.xml
+++ b/MNA/src/main/res/values/library_vl.xml
@@ -6,6 +6,10 @@
     <string name="loading_desc">Loading...</string>
     <string name="sponsored">Sponsored</string>
 
+    <string name="banner_ad_test_admob">ca-app-pub-3940256099942544/6300978111</string>
+    <string name="interstitial_ad_test_admob">ca-app-pub-3940256099942544/1033173712</string>
+    <string name="reward_ad_test_admob">ca-app-pub-3940256099942544/5224354917</string>
+    <string name="native_ad_test_admob">ca-app-pub-3940256099942544/1044960115</string>
 
 
     <color name="white_nt">#FFFFFF</color>
