--- a/MNA/src/main/res/layout/mna_native_ad_mopub.xml
+++ b/MNA/src/main/res/layout/mna_native_ad_mopub.xml
@@ -50,7 +50,7 @@
                 android:gravity="end"
                 android:text="Announce"
                 android:textAlignment="textEnd"
-                android:textColor="@color/white_nt"
+                android:textColor="@color/black_nt"
                 android:textSize="14sp"
                 android:visibility="visible" />
 
