--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
     <com.wineberryhalley.mna.base.NativeMNA
         android:id="@+id/native_ad"
         android:layout_width="match_parent"
-        android:layout_height="380dp"
+        android:layout_height="wrap_content"
 
         android:layout_marginTop="10dp">
 
